versions/26.2.0/docs/Parameters.md
# Parameters


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**analytics** | **bool** |  | 
**branding_css** | **str** |  | 
**branding_logo** | **str** |  | 
**email_logo_url** | **str, none_type** |  | 
**client_offer_file_search** | **bool** |  | 
**default_mac_protocol** | **str** |  | 
**external_url** | **str, none_type** | http://host/ | 
**file_manager_recycle_bin** | **bool** | Recycle bins are usually either in Workspace/Share or Volume folder | 
**https_redirect** | **str, none_type** |  | 
**language** | **str** |  | 
**ltfs_default_restore_to_original_location** | **bool** |  | 
**ltfs_default_search_directories** | **bool** |  | 
**ltfs_library_address** | **str, none_type** |  | 
**mail_styling** | [**EmailStyling**](EmailStyling.md) |  | 
**media_allow_anonymous_links** | **bool** |  | 
**media_allow_changing_archived** | **bool** |  | 
**media_auto_play** | **bool** |  | 
**media_auto_proxy** | **bool** |  | 
**media_auto_scan** | **bool** |  | 
**media_auto_transport** | **bool** |  | 
**media_background_auto_pause** | **bool** |  | 
**media_default_custom_field_type** | **str** |  | 
**media_default_delete_behaviour** | **str** |  | 
**media_detect_versions** | **bool** |  | 
**media_force_show_deleted** | **bool, none_type** |  | 
**media_keep_selection_when_browsing** | **bool** |  | 
**media_recycle_bin** | **bool** | Recycle bin is usually in the .recycle-bin folder in the volume root | 
**media_require_link_password** | **bool** |  | 
**media_max_link_views** | **int, none_type** |  | 
**media_shuttle_left_behaviour** | **str** |  | 
**ntp_enable** | **bool** |  | 
**ntp_offer_sync** | **bool** |  | 
**otp_policy** | **str** |  | 
**password_login** | **bool** |  | 
**session_key_restrict_to_ip** | **bool** |  | 
**sharing_smb_allow_anonymous** | **bool** |  | 
**tasks_run_scheduled** | **bool** |  | 
**update_in_progress** | **bool** |  | 
**users_default_permissions** | **str** | Copy this value from an existing user | 
**user_notification_settings** | **bool** |  | 
**workspaces_path** | **str** |  | 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


